--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -221,132 +221,6 @@ $font-sizes: (
   }
 }
 
-.flex {
-  &--display {
-    display: flex; // Equivalente a "d-flex" en Bootstrap
-  }
-
-  &--row {
-    flex-direction: row; // Alineación horizontal (por defecto en flex)
-  }
-
-  &--column {
-    flex-direction: column; // Alineación vertical
-  }
-
-  &--justify-center {
-    justify-content: center; // Centrar horizontalmente
-  }
-
-  &--justify-around {
-    justify-content: space-around; // Distribuir espacio entre elementos
-  }
-
-  &--justify-between {
-    justify-content: space-between; // Distribuir espacio entre elementos
-  }
-
-  &--justify-end {
-    justify-content: flex-end; // Alinear al final del contenedor
-  }
-
-  &--align-center {
-    align-items: center; // Centrar verticalmente
-  }
-
-  &--align-start {
-    align-items: flex-start; // Alinear al inicio verticalmente
-  }
-
-  &--align-end {
-    align-items: flex-end; // Alinear al final verticalmente
-  }
-
-  &--wrap {
-    flex-wrap: wrap; // Permitir el wrapping de elementos
-  }
-
-  &--nowrap {
-    flex-wrap: nowrap; // Evitar el wrapping de elementos
-  }
-
-  &--auto {
-    flex: auto; 
-  }
-
-  // Flex-grow
-  @for $i from 0 through 5 {
-    &--grow-#{$i} {
-      flex-grow: $i !important; // Equivalente a "flex-grow-0", "flex-grow-1", etc. en Bootstrap
-    }
-  }
-
-  // Flex-shrink
-  @for $i from 0 through 5 {
-    &--shrink-#{$i} {
-      flex-shrink: $i !important; // Equivalente a "flex-shrink-0", "flex-shrink-1", etc. en Bootstrap
-    }
-  }
-
-  // Flex-basis
-  @each $basis, $value in (auto: auto, 0: 0%, 25: 25%, 50: 50%, 75: 75%, 100: 100%) {
-    &--basis-#{$basis} {
-      flex-basis: $value !important; // Equivalente a "flex-basis-auto", "flex-basis-0", etc.
-    }
-  }
-
-}
-
-.dimension {
-  &--vh-50 {
-    height: 50vh !important;
-  }
-
-  &--vh-100 {
-    height: 100vh !important;
-  }
-
-  &--vh-150 {
-    height: 150vh !important;
-  }
-
-  &--vh-175 {
-    height: 175vh !important;
-  }
-
-  &--vh-300 {
-    height: 300vh !important;
-  }
-
-  &--vw-100 {
-    width: 100vw !important;
-  }
-
-  &--h-max {
-    height: max-content !important;
-  }
-
-  &--h-fit {
-    height: fit-content !important;
-  }
-
-  &--h-100 {
-    height: 100% !important;
-  }
-
-  &--w-max {
-    width: max-content !important;
-  }
-
-  &--w-fit {
-    width: fit-content !important;
-  }
-
-  &--w-100 {
-    width: 100% !important;
-  }
-}
-
 .object-fit {
   &--cover {
     object-fit: cover; // Equivalente a "object-fit-cover" en Bootstrap
@@ -354,48 +228,6 @@ $font-sizes: (
 
   &--contain {
     object-fit: contain; // Equivalente a "object-fit-contain" en Bootstrap
-  }
-}
-
-.position {
-  &--relative {
-    position: relative; // Equivalente a "position-relative" en Bootstrap
-  }
-
-  &--absolute {
-    position: absolute; // Equivalente a "position-absolute" en Bootstrap
-  }
-
-  &--sticky {
-    position: sticky; // Equivalente a "position-sticky" en Bootstrap
-  }
-
-  &--fixed {
-    position: fixed; // Equivalente a "position-fixed" en Bootstrap
-  }
-
-  &--top-0 {
-    top: 0; // Equivalente a "top-0" en Bootstrap
-  }
-
-  &--bottom-0 {
-    bottom: 0; // Equivalente a "bottom-0" en Bootstrap
-  }
-
-  &--left-0 {
-    left: 0; // Equivalente a "left-0" en Bootstrap
-  }
-
-  &--right-0 {
-    right: 0; // Equivalente a "right-0" en Bootstrap
-  }
-
-  &--top-50 {
-    top: 50%; // Equivalente a "top-0" en Bootstrap
-  }
-
-  &--left-50 {
-    left: 50%; // Equivalente a "top-0" en Bootstrap
   }
 }
 
@@ -455,4 +287,24 @@ $font-sizes: (
   &--display {
       display: block;
   }
+}
+
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
 }
