--- a/src/components/AnimatedButton/AnimatedButton.scss
+++ b/src/components/AnimatedButton/AnimatedButton.scss
@@ -1,11 +1,6 @@
 // Variables de tamaño
-$button-width: 200;
-$button-height: 50;
-$curve-offset: $button-height * 0.8; // Puedes cambiar 0.4
-
 .animated-button {
-  width: #{$button-width}px;
-  height: #{$button-height}px;
+  box-sizing: border-box;
   border: 1px solid black;
   overflow: hidden;
   position: relative;
@@ -25,12 +20,6 @@ $curve-offset: $button-height * 0.8; // Puedes cambiar 0.4
   .text-white {
     color: white; /* Color del texto al cubrirse */
     opacity: 1; /* Opción para hacer el texto invisible */
-  }
-
-  svg {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.3s ease;
   }
 
   // Path base
