--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -52,3 +52,29 @@
 // }
 
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('./../fonts/social-font/icomoon.eot?eum11x');
+  src:  url('./../fonts/social-font/icomoon.eot?eum11x#iefix') format('embedded-opentype'),
+    url('./../fonts/social-font/icomoon.ttf?eum11x') format('truetype'),
+    url('./../fonts/social-font/icomoon.woff?eum11x') format('woff'),
+    url('./../fonts/social-font/icomoon.svg?eum11x#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
