--- a/src/assets/sass/pages/_contact-page.scss
+++ b/src/assets/sass/pages/_contact-page.scss
@@ -2,7 +2,7 @@
 
   // Modificador para el email
   &__email {
-    color: $cor-primary;
+    color: var(--cor-primary);
     text-align: center;
   }
 
@@ -13,6 +13,7 @@
     align-items: center;
     width: 100%;
     padding: 20px 5vw;
+    text-decoration: none;
 
     // Ajustes para versión móvil
     @media (max-width: $cor-grid-breakpoints-lg) {
@@ -21,55 +22,64 @@
 
       &>.contact__link {
         margin-bottom: 10px;
+
       }
     }
   }
 
   &__link {
-    color: $cor-primary;
+    color: var(--cor-primary);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    text-decoration: none;
   }
 
   &__logo-circle {
     width: 46px;
     height: 46px;
     border-radius: 50%;
-    background-color: $cor-primary;
+    background-color: var(--cor-primary);
     display: flex;
     justify-content: center;
     align-items: center;
     background-position: center;
     background-repeat: no-repeat;
 
-    &--linkedin {
-      background-image: url('/social-media/linkedin.svg');
+    &.icon-linkedin:before {
+      content: "\e903";
+      color: #da6a2d;
     }
 
-    &--github {
-      background-image: url('/social-media/github.svg');
+    &.icon-github:before {
+      content: "\e901";
+      color: #da6a2d;
     }
 
-    &--instagram {
-      background-image: url('/social-media/instagram.svg');
+    &.icon-instagram:before {
+      content: "\e902";
+      color: #da6a2d;
     }
 
-    &--behance {
-      background-image: url('/social-media/behance.svg');
+    &.icon-behance:before {
+      content: "\e900";
+      color: #da6a2d;
+    }
+    &.icon-mail {
+      background: transparent;
+    }
+    &.icon-mail:before {
+      content: "\e904";
+      color: #da6a2d;
     }
 
-    &--mail {
-      background-color: transparent;
-      background-image: url('/social-media/mail.svg');
-    }
   }
 
   /*FORM*/
   &__form-container {
-    padding-top: 6rem;
-    background-color: $cor-light;
+    padding-top: 8rem !important;
+    background-color: var(--cor-light);
     height: 100vh;
   }
 
