--- a/src/assets/sass/pages/_home-page.scss
+++ b/src/assets/sass/pages/_home-page.scss
@@ -6,6 +6,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 10;
+        text-align: center;
+        color: var(--cor-light);
     }
 
     &-images {
