--- a/src/assets/sass/pages/_portfolio-page.scss
+++ b/src/assets/sass/pages/_portfolio-page.scss
@@ -15,6 +15,7 @@
 
         &-parallax {
             position: absolute;
+            overflow-y: clip;
 
             &:nth-of-type(1) {
                 top: 31vh;
@@ -64,4 +65,10 @@
             }
         }
     }
+}
+
+.parallax__image-blur:hover {
+    filter: blur(10px) contrast(1.2) invert(0.25) saturate(3.25);
+    transition: filter 0.5s ease-out;
+    position: relative;
 }
