--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -9,7 +9,7 @@ body.light-theme {
 
 body.dark-theme {
     --cor-primary: #DA6A2D;
-    --cor-secondary: 341116;
+    --cor-secondary: #341116;
     --cor-dark: #EBE6E0;
     --cor-light: #131313;
     --cor-gray: #71827b;
