theme, theme transition, dependecies deleted, form container

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@
     --cor-light: #EBE6E0 ;
     --cor-gray: #71827b ;
     --cor-warm-gray: #b7bfbc;
+    --cor-navbar-light: #EBE6E0;
 }
 
 // Configuración fuentes generales
