--- a/src/assets/sass/pages/_contact-page.scss
+++ b/src/assets/sass/pages/_contact-page.scss
@@ -78,7 +78,7 @@
 
   /*FORM*/
   &__form-container {
-    padding-top: 8rem !important;
+    padding: 8.5rem 63px 4rem 63px;
     background-color: var(--cor-light);
     height: 100vh;
   }
