--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -5,6 +5,7 @@ body.light-theme {
     --cor-light: #EBE6E0;
     --cor-gray: #71827b;
     --cor-warm-gray: #b7bfbc;
+    --cor-navbar-light: #EBE6E0;
 }
 
 body.dark-theme {
@@ -14,6 +15,7 @@ body.dark-theme {
     --cor-light: #131313;
     --cor-gray: #71827b;
     --cor-warm-gray: #b7bfbc;
+    --cor-navbar-light: #EBE6E0;
 }
 
 // FONTS
