--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -149,6 +149,23 @@
   }
 }
 
+/*THEME BUTTON*/
+.theme {
+
+  &__button-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding-left: 20px;
+    padding-bottom: 12px;
+    z-index: 1000000;
+  }
+
+  &__animation {
+    transition: 0.3s background-color;
+  }
+
+}
 
 /*SCROLL*/
 html.lenis,
