--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -1,6 +1,5 @@
 .pdetails_ {
-  
-/*IMAGES DETAILED VIEW OVERLAY*/
+  /*IMAGES DETAILED VIEW OVERLAY*/
   &_container-detail {
     display: flex;
     flex-direction: column;
@@ -11,7 +10,7 @@
     position: fixed !important;
     top: 0;
     right: 0;
-    z-index: 1100;
+    z-index: 100;
     width: 100vw;
   }
 
@@ -23,13 +22,12 @@
     border-radius: 10px;
     z-index: 2;
     flex: 1;
-
   }
 
   &_button-close-overlay {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 80px;
+    right: 60px;
     background: none;
     border: none;
     font-size: 3rem;
@@ -93,10 +91,9 @@
   &_detail-mode {
     overflow: hidden;
     max-height: 100vh;
-
   }
 
-/*PROJECT DETAILS ORDERED AND UNORDERED GRID*/
+  /*PROJECT DETAILS ORDERED AND UNORDERED GRID*/
   &_images-gallery-section {
     transition: all 0.3s ease;
     /* Añadir transición suave */
@@ -151,8 +148,7 @@
   }
 
   &.ordered {
-    grid-template-columns: repeat(5,
-        1fr);
+    grid-template-columns: repeat(5, 1fr);
 
     .gallery-grid__item {
       height: 200px !important;
