--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -158,7 +158,7 @@
     left: 0;
     padding-left: 20px;
     padding-bottom: 12px;
-    z-index: 1000000;
+    z-index: 1030;
   }
 
   &__animation {
