--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -1,16 +1,11 @@
 .pdetails_ {
   /*IMAGES DETAILED VIEW OVERLAY*/
   &_container-detail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
     height: 100vh;
     position: fixed !important;
     top: 0;
     right: 0;
-    z-index: 100;
+    z-index: 1032;
     width: 100vw;
   }
 
@@ -26,8 +21,8 @@
 
   &_button-close-overlay {
     position: absolute;
-    top: 80px;
-    right: 60px;
+    top: 3%;
+    right: 3%;
     background: none;
     border: none;
     font-size: 3rem;
@@ -48,11 +43,23 @@
   }
 
   &_container-thumbnails {
+    // display: flex;
+    // overflow-x: auto;
+    // z-index: 20;
+    // max-width: 100vw;
+    // position: fixed;
+    // bottom: 0%;
+    // left: 50%;
+    // transform: translateX(-50%);
+
     display: flex;
-    gap: 10px;
-    overflow-x: scroll;
-    padding: 10px 0;
-    z-index: 100;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 100vh;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    z-index: 20;
 
     &::-webkit-scrollbar {
       display: none;
@@ -60,11 +67,7 @@
   }
 
   &_card-thumbnail {
-    width: 60px;
-    height: 90px;
-    overflow: hidden;
-    border-radius: 5px;
-    border: 2px solid transparent;
+
     flex: 0 0 auto;
 
     &--selected {
@@ -83,6 +86,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 1031;
     height: 100vh;
     width: 100vw;
     background-color: var(--cor-light);
